force-app/main/default/objects/Opportunity/fields/ActiveCamp__Last_Synced__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Last_Synced__c</fullName>
    <description>Timestamp of last sync of record between Salesforce and ActiveCampaign.</description>
    <label>ActiveCampaign Last Synced</label>
    <type>DateTime</type>
</CustomField>