force-app/main/default/objects/Opportunity/fields/ACV__c.field-meta.xml
<CustomField>
    <fullName>ACV__c</fullName>
    <description>The sum of the price after discounts, of the first 12 months (or less) of the &quot;subscription&quot; family of the Order Form.</description>
    <inlineHelpText>Sum of the first 12 months of subscription revenue</inlineHelpText>
    <label>ACV</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>