force-app/main/default/objects/Opportunity/fields/After_Scenario__c.field-meta.xml
<CustomField>
    <fullName>After_Scenario__c</fullName>
    <description>Creates a &quot;stand in the future&quot; vision of how life could be better for the portfolio company after resolving the Before Scenarios.</description>
    <inlineHelpText>Creates a &quot;stand in the future&quot; vision of how life could be better for the portfolio company after resolving the Before Scenarios.</inlineHelpText>
    <label>After Scenario</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>