force-app/main/default/objects/Opportunity/fields/Approval_Needed__c.field-meta.xml
<CustomField>
    <fullName>Approval_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Needed</label>
    <type>Checkbox</type>
</CustomField>