force-app/main/default/objects/Opportunity/fields/Architecture_Approval__c.field-meta.xml
<CustomField>
    <fullName>Architecture_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Architecture Approval</label>
    <type>Checkbox</type>
</CustomField>