force-app/main/default/objects/Opportunity/fields/Architecture_Obs__c.field-meta.xml
<CustomField>
    <fullName>Architecture_Obs__c</fullName>
    <label>Architecture Obs.</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>