force-app/main/default/objects/Opportunity/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <description>Authority allows us to understand the different buying roles within the prospect group we’re talking to, this field should contain either the description of the decision maker or the decision making process in the company.</description>
    <inlineHelpText>Authority allows us to understand the different buying roles within the prospect group we’re talking to, this field should contain either the description of the decision maker or the decision making process in the company.</inlineHelpText>
    <label>Authority</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>