force-app/main/default/objects/Opportunity/fields/Before_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Before_Scenario__c</fullName>
    <description>Paints a picture of an undesirable state of being and elaborates on the pain point, goal, or need that the Value Drive addresses.</description>
    <inlineHelpText>Paints a picture of an undesirable state of being and elaborates on the pain point, goal, or need that the Value Drive addresses.</inlineHelpText>
    <label>Before Scenario</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>