force-app/main/default/objects/Opportunity/fields/Business_Case__c.field-meta.xml
<CustomField>
    <fullName>Business_Case__c</fullName>
    <label>Status Update</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>