force-app/main/default/objects/Opportunity/fields/Business_Category__c.field-meta.xml
<CustomField>
    <fullName>Business_Category__c</fullName>
    <formula>TEXT( Account.Category__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Category</label>
    <type>Text</type>
</CustomField>