force-app/main/default/objects/Opportunity/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Money-Out</fullName>
                <color>#3366FF</color>
                <label>Money-Out</label>
            </value>
            <value>
                <fullName>Accounting</fullName>
                <color>#FFCC66</color>
                <label>Accounting</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <color>#DDDDDD</color>
                <label>Other</label>
            </value>
            <value>
                <fullName>Money-In</fullName>
                <color>#66FF99</color>
                <label>Money-In</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>