force-app/main/default/objects/Opportunity/fields/Champion__c.field-meta.xml
<CustomField>
    <fullName>Champion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person(s) with power and influence inside the customer&apos;s organization who are actively selling on your behalf</description>
    <inlineHelpText>The person(s) with power and influence inside the customer&apos;s organization who are actively selling on your behalf</inlineHelpText>
    <label>Champion</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Champion)</relationshipLabel>
    <relationshipName>Opportunity1</relationshipName>
    <type>Lookup</type>
</CustomField>