force-app/main/default/objects/Opportunity/fields/Champion_Level_of_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Champion_Level_of_Confidence__c</fullName>
    <description>Notes the AEs level of confidence on the Champion for the deal</description>
    <inlineHelpText>Please note the level of confidence you have on the Champion noted</inlineHelpText>
    <label>Champion - Level of Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Level_of_Confidence</valueSetName>
    </valueSet>
</CustomField>