force-app/main/default/objects/Opportunity/fields/Close_not_won_cause__c.field-meta.xml
<CustomField>
    <fullName>Close_not_won_cause__c</fullName>
    <label>Closed Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Legal reasons</fullName>
            </value>
            <value>
                <fullName>Lost no decision - customer unresponsive</fullName>
            </value>
            <value>
                <fullName>Lost to competition</fullName>
            </value>
            <value>
                <fullName>Lost to competition - Internal Development</fullName>
            </value>
            <value>
                <fullName>No Budget</fullName>
            </value>
            <value>
                <fullName>No ICP - Industry</fullName>
            </value>
            <value>
                <fullName>No ICP - Revenue Size</fullName>
            </value>
            <value>
                <fullName>Poor timing</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Solution did not fit customer&apos;s need</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>