force-app/main/default/objects/Opportunity/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <description>Name Competitor(s)</description>
    <inlineHelpText>Who are the competitors on the opportunity? If it is an internal solution, please note &quot;internal solution&quot; with detail about the internal solution. How is the internal solution competing with Simetrik?</inlineHelpText>
    <label>Competition</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>