force-app/main/default/objects/Opportunity/fields/Competition_Level_of_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Competition_Level_of_Confidence__c</fullName>
    <description>Notes the AEs level of confidence on the Competition for the deal</description>
    <inlineHelpText>Please note the level of confidence you have on the Competition noted</inlineHelpText>
    <label>Competition - Level of Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Level_of_Confidence</valueSetName>
    </valueSet>
</CustomField>