force-app/main/default/objects/Opportunity/fields/Contract_End__c.field-meta.xml
<CustomField>
    <fullName>Contract_End__c</fullName>
    <formula>SBQQ__PrimaryQuote__r.Contract_End_Date__c</formula>
    <label>Contract End</label>
    <type>Date</type>
</CustomField>