force-app/main/default/objects/Opportunity/fields/Contract_Gen__c.field-meta.xml
<CustomField>
    <fullName>Contract_Gen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Gen</label>
    <type>Checkbox</type>
</CustomField>