force-app/main/default/objects/Opportunity/fields/Current_Reconciliation_Process__c.field-meta.xml
<CustomField>
    <fullName>Current_Reconciliation_Process__c</fullName>
    <description>Times, sources, people, etc</description>
    <inlineHelpText>Times, sources, people, etc</inlineHelpText>
    <label>Current Reconciliation Process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>