force-app/main/default/objects/Opportunity/fields/Data_Extraction_Methods__c.field-meta.xml
<CustomField>
    <fullName>Data_Extraction_Methods__c</fullName>
    <description>ERP, Self Systems, etc</description>
    <inlineHelpText>ERP, Self Systems, etc</inlineHelpText>
    <label>Data Extraction Methods</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>