force-app/main/default/objects/Opportunity/fields/Days_in_Stage_0__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Stage_0__c</fullName>
    <formula>(Stage_0_Exit_Date__c - Stage_0_Entrance_Date__c)+1</formula>
    <label>Days in Stage 0</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>