force-app/main/default/objects/Opportunity/fields/Days_in_Stage_1__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Stage_1__c</fullName>
    <formula>( Stage_1_Exit_Date__c -  Stage_0_Exit_Date__c ) + 1</formula>
    <label>Days in Stage 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>