force-app/main/default/objects/Opportunity/fields/Days_in_Stage_2__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Stage_2__c</fullName>
    <formula>IF( ISBLANK(Stage_1_Exit_Date__c),

 Stage_2_Exit_Date__c  -  Stage_0_Exit_Date__c,

( Stage_2_Exit_Date__c  -  Stage_1_Exit_Date__c ))+1</formula>
    <label>Days in Stage 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>