force-app/main/default/objects/Opportunity/fields/Decision_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Decision_Criteria__c</fullName>
    <description>The formal solution requirements against which each participant in the Decision Process will evaluate</description>
    <inlineHelpText>Please input the &quot;shopping list&quot; of requirements against which each participant in the Decision Process will evaluate</inlineHelpText>
    <label>Decision Criteria</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>