force-app/main/default/objects/Opportunity/fields/Decision_Criteria_Level_of_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Decision_Criteria_Level_of_Confidence__c</fullName>
    <description>Notes the AEs level of confidence on the Decision Criteria for the deal</description>
    <inlineHelpText>Please note the level of confidence you have on the Decision Criteria noted</inlineHelpText>
    <label>Decision Criteria - Level of Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Level_of_Confidence</valueSetName>
    </valueSet>
</CustomField>