force-app/main/default/objects/Opportunity/fields/DecisionProcess__c.field-meta.xml
<CustomField>
    <fullName>DecisionProcess__c</fullName>
    <description>The process by which the customer will evaluate, select, and purchase a solution</description>
    <inlineHelpText>Please input the process by which the customer will evaluate, select, and purchase a solution</inlineHelpText>
    <label>Decision Process</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>