force-app/main/default/objects/Opportunity/fields/Domain_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Domain_Opportunity__c</fullName>
    <formula>IF( CreatedBy.Dominio_Usuario__c = $User.Dominio_Usuario__c  || $User.Dominio_Usuario__c = &quot;simetrik.com&quot; || $User.Dominio_Usuario__c = &quot;clouderconsulting.com&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domain Opportunity</label>
    <type>Checkbox</type>
</CustomField>