force-app/main/default/objects/Opportunity/fields/Economic__c.field-meta.xml
<CustomField>
    <fullName>Economic__c</fullName>
    <label>Economic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>