force-app/main/default/objects/Opportunity/fields/Economic_Buyer_Level_of_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Economic_Buyer_Level_of_Confidence__c</fullName>
    <description>Notes the level of confidence the AE has in identifying the Economic Buyer</description>
    <inlineHelpText>Please note the level of confidence you have in your identification of the Economic Buyer</inlineHelpText>
    <label>Economic Buyer - Level of Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Level_of_Confidence</valueSetName>
    </valueSet>
</CustomField>