force-app/main/default/objects/Opportunity/fields/EconomicBuyer__c.field-meta.xml
<CustomField>
    <fullName>EconomicBuyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The individual within the customer&apos;s organization who is required for the final &quot;yes&quot;</description>
    <inlineHelpText>Please add the Contact within the customer&apos;s organization who is required for the final &quot;yes&quot;</inlineHelpText>
    <label>Economic Buyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Economic Buyer)</relationshipLabel>
    <relationshipName>Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>