force-app/main/default/objects/Opportunity/fields/Email_for_Simetrik_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Email_for_Simetrik_Invoices__c</fullName>
    <description>To which email should the invoices issued by Simetrik be sent? Name of the person responsible for receiving invoices</description>
    <inlineHelpText>To which email should the invoices issued by Simetrik be sent? Name of the person responsible for receiving invoices</inlineHelpText>
    <label>Email for Simetrik Invoices</label>
    <type>TextArea</type>
</CustomField>