force-app/main/default/objects/Opportunity/fields/Evameet__c.field-meta.xml
<CustomField>
    <fullName>Evameet__c</fullName>
    <label>Evameet</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>