force-app/main/default/objects/Opportunity/fields/Funct__c.field-meta.xml
<CustomField>
    <fullName>Funct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funct</label>
    <type>Checkbox</type>
</CustomField>