force-app/main/default/objects/Opportunity/fields/Gap_Before_and_After__c.field-meta.xml
<CustomField>
    <fullName>Gap_Before_and_After__c</fullName>
    <description>CoM - Before &amp; After scenario  / Negative &amp; Positive Consequences</description>
    <label>Gap (Before and After Scenario)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>