force-app/main/default/objects/Opportunity/fields/Has_Multi_Year_Contract__c.field-meta.xml
<CustomField>
    <fullName>Has_Multi_Year_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If 2+ year contract, box must be checked</description>
    <inlineHelpText>Check box for contracts of 2+ years to get multi-year approval.</inlineHelpText>
    <label>Has Multi Year Contract</label>
    <type>Checkbox</type>
</CustomField>