force-app/main/default/objects/Opportunity/fields/How_We_Do_It__c.field-meta.xml
<CustomField>
    <fullName>How_We_Do_It__c</fullName>
    <inlineHelpText>Describe how Simetrik&apos;s offering satisfies the Decision Criteria</inlineHelpText>
    <label>How We Do It</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>