force-app/main/default/objects/Opportunity/fields/How_We_Do_It_Better_Second_Competitor__c.field-meta.xml
<CustomField>
    <fullName>How_We_Do_It_Better_Second_Competitor__c</fullName>
    <description>How Simetrik satisfies the Decision Criteria in a way that is superior to (or different than) the Second Competitor.</description>
    <inlineHelpText>How Simetrik satisfies the Decision Criteria in a way that is superior to (or different than) the Second Competitor.</inlineHelpText>
    <label>How We Do It Better - Second Competitor</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>