force-app/main/default/objects/Opportunity/fields/Identified_Pain_Level_of_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Identified_Pain_Level_of_Confidence__c</fullName>
    <description>Notes the AEs level of confidence on the Identified Pain for the deal</description>
    <inlineHelpText>Please note the level of confidence you have on the Identified Pain noted</inlineHelpText>
    <label>Identified Pain - Level of Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Level_of_Confidence</valueSetName>
    </valueSet>
</CustomField>