force-app/main/default/objects/Opportunity/fields/IdentifyPain__c.field-meta.xml
<CustomField>
    <fullName>IdentifyPain__c</fullName>
    <description>The &quot;pain&quot; is the catalyst for the customer solving the problem within a set timeframe</description>
    <inlineHelpText>Please note the &quot;pain&quot; the customer reacting to which is moving them to action within a set timeframe</inlineHelpText>
    <label>Identified Pain</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>