force-app/main/default/objects/Opportunity/fields/Implementation_process_leader__c.field-meta.xml
<CustomField>
    <fullName>Implementation_process_leader__c</fullName>
    <description>Who will be the person in charge of leading the implementation process and to whom any matter that arises in the process can be raised?</description>
    <inlineHelpText>Who will be the person in charge of leading the implementation process and to whom any matter that arises in the process can be raised?</inlineHelpText>
    <label>Implementation process leader</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>