force-app/main/default/objects/Opportunity/fields/Industries__c.field-meta.xml
<CustomField>
    <fullName>Industries__c</fullName>
    <formula>TEXT( Account.Industry )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry</label>
    <type>Text</type>
</CustomField>