force-app/main/default/objects/Opportunity/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industrias</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Fintech &amp; Lending</fullName>
            </value>
            <value>
                <fullName>PSP &amp; Wallets</fullName>
            </value>
            <value>
                <fullName>Ecommerce</fullName>
                <isActive>false</isActive>
                <label>Ecommerce</label>
            </value>
            <value>
                <fullName>Insurance</fullName>
                <isActive>false</isActive>
                <label>Insurance</label>
            </value>
            <value>
                <fullName>Marketplace</fullName>
                <isActive>false</isActive>
                <label>Marketplace</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>