force-app/main/default/objects/Opportunity/fields/Installed_Base__c.field-meta.xml
<CustomField>
    <fullName>Installed_Base__c</fullName>
    <formula>( Account.Installed_Base__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installed Base</label>
    <type>Checkbox</type>
</CustomField>