force-app/main/default/objects/Opportunity/fields/Integrations_Approval__c.field-meta.xml
<CustomField>
    <fullName>Integrations_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integrations Approval</label>
    <type>Checkbox</type>
</CustomField>