force-app/main/default/objects/Opportunity/fields/Integrations_Obs__c.field-meta.xml
<CustomField>
    <fullName>Integrations_Obs__c</fullName>
    <label>Integrations Obs.</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>