force-app/main/default/objects/Opportunity/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>Date of the first invoice issued to the customer related to this opportunity</description>
    <inlineHelpText>Date of the first invoice issued to the customer related to this opportunity. Remember that invoices are issued on the 25th of each month.</inlineHelpText>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>