force-app/main/default/objects/Opportunity/fields/IVA_Support__c.field-meta.xml
<CustomField>
    <fullName>IVA_Support__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please note the IVA that is supporting this opportunity</inlineHelpText>
    <label>IVA Support</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Title</field>
            <operation>contains</operation>
            <value>IVA</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>