force-app/main/default/objects/Opportunity/fields/Lead_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detail__c</fullName>
    <inlineHelpText>Input the name of the event, name of the third party, etc</inlineHelpText>
    <label>Lead Source Detail</label>
    <type>TextArea</type>
</CustomField>