force-app/main/default/objects/Opportunity/fields/Lead_Source_Summary__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Summary__c</fullName>
    <formula>IF( ISPICKVAL(LeadSource, &apos;CS - Customer Referral&apos;), &apos;CS&apos;,
IF( ISPICKVAL(LeadSource, &apos;CS - Event&apos;), &apos;CS&apos;,
IF( ISPICKVAL(LeadSource, &apos;CS - Internal Referral&apos;), &apos;CS&apos;,
IF( ISPICKVAL(LeadSource, &apos;Marketing - 3rd Party Referral&apos;), &apos;Marketing&apos;,
IF( ISPICKVAL(LeadSource, &apos;Marketing - Internal Referral&apos;), &apos;Marketing&apos;,
IF( ISPICKVAL(LeadSource, &apos;Marketing - Online Event/Webinar&apos;), &apos;Marketing&apos;,
IF( ISPICKVAL(LeadSource, &apos;Marketing - Physical Event&apos;), &apos;Marketing&apos;,
IF( ISPICKVAL(LeadSource, &apos;Marketing - Website&apos;), &apos;Marketing&apos;,
IF( ISPICKVAL(LeadSource, &apos;Partnerships - Channel&apos;), &apos;Partners&apos;,
IF( ISPICKVAL(LeadSource, &apos;PS - Customer Referral&apos;), &apos;Implementation&apos;,
IF( ISPICKVAL(LeadSource, &apos;Sales - Customer Referral&apos;), &apos;Sales Direct&apos;,
IF( ISPICKVAL(LeadSource, &apos;Sales - Event&apos;), &apos;Sales Direct&apos;,
IF( ISPICKVAL(LeadSource, &apos;Sales - Internal Referral&apos;), &apos;Sales Direct&apos;,
IF( ISPICKVAL(LeadSource, &apos;Sales - Investors&apos;), &apos;Investors&apos;,
IF( ISPICKVAL(LeadSource, &apos;Sales - IVAs&apos;), &apos;IVAs&apos;,
IF( ISPICKVAL(LeadSource, &apos;Sales - Outbound&apos;), &apos;Sales Direct&apos;,
TEXT(LeadSource)
))))))))))))))))</formula>
    <label>Lead Source Summary</label>
    <type>Text</type>
</CustomField>