force-app/main/default/objects/Opportunity/fields/Metrics__c.field-meta.xml
<CustomField>
    <fullName>Metrics__c</fullName>
    <description>Quantifiable measurements and proof of the business benefits of the solution</description>
    <inlineHelpText>Please input quantifiable measurements and proof of the business benefits of Simetrik</inlineHelpText>
    <label>Metrics</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>