force-app/main/default/objects/Opportunity/fields/Metrics_Level_of_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Metrics_Level_of_Confidence__c</fullName>
    <description>Level of confidence the AE has with Metrics</description>
    <inlineHelpText>Please note your level of confidence with the Metrics input you provided</inlineHelpText>
    <label>Metrics - Level of Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Level_of_Confidence</valueSetName>
    </valueSet>
</CustomField>