force-app/main/default/objects/Opportunity/fields/MRR__c.field-meta.xml
<CustomField>
    <fullName>MRR__c</fullName>
    <description>The price, after discounts in the month 12 of the contract.</description>
    <inlineHelpText>Exit MRR, sum of all subscription revenue for the last month of the contract</inlineHelpText>
    <label>MRR</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>