force-app/main/default/objects/Opportunity/fields/NDA_Required__c.field-meta.xml
<CustomField>
    <fullName>NDA_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NDA Required?</label>
    <type>Checkbox</type>
</CustomField>