force-app/main/default/objects/Opportunity/fields/Need__c.field-meta.xml
<CustomField>
    <fullName>Need__c</fullName>
    <description>Describe the problem and/or the need that you have identified for this customer</description>
    <inlineHelpText>Describe the problem and/or the need that you have identified for this customer</inlineHelpText>
    <label>Customer Need</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>